# metapath-demo

./: README.md  pyproject.toml
metapath_demo/: __init__.py  finder_loader.py
tests/: test_metapath_demo.py
tests/_test_data/_test_package/: __init__.py
